# VoiceChat

./: pyproject.toml
core/: .env  db.sqlite3
core/core/: settings.py  urls.py
core/voicePanel/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/voicePanel/migrations/: 0001_initial.py  0002_voicemessage.py
my-vue-app/: package-lock.json  package.json
my-vue-app/src/: App.vue
my-vue-app/src/pages/home/: home.vue
my-vue-app/src/router/: index.js
